# FlorestaBA

./: CONTRIBUTING.md  Cargo.toml
crates/floresta/: Cargo.toml
crates/floresta-chain/src/: extensions.rs  lib.rs
crates/floresta-chain/src/bitcoinkernelimpl/: blockchaininterface.rs  mod.rs
crates/floresta-chain/tests/: transaction_tests.rs
crates/floresta-electrum/src/: electrum_protocol.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: error.rs  florestad.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  control.rs  mod.rs  network.rs  request.rs  res.rs  server.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: jsonrpc_client.rs  lib.rs  rpc.rs  rpc_types.rs
crates/floresta-rpc/src/test_data/: getblock.json  mod.rs
crates/floresta-rpc/src/typed_commands/: mod.rs  request.rs  response.rs
crates/floresta-watch-only/: Cargo.toml
crates/floresta-watch-only/src/: lib.rs  memory_database.rs  sqlite_database.rs
crates/floresta/examples/: watch-only.rs
tests/: test_runner.py
tests/florestad/: rpcserver_request_parsing.py
tmp-dir/floresta-temp-dir/binaries/: florestad
